# libchuck

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Makefile  Makefile.in  README  README.md  config.h.in  configure  configure.ac  send.gdb
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
chuck/: ._VERSIONS
chuck/src/: chuck_compile.cpp  makefile  makefile.alsa  ugen_clip.cpp  ugen_clip.h  util_string.cpp
java/: Chuck.c  Chuck.cpp  Chuck.java  FindHome.java  Jchuck.cpp  Makefile  edu_princeton_cs_chuck_Jchuck.cpp  handle.h
java/chuck/: library.properties
java/chuck/examples/ChuckSimple/: ChuckSimple.pde
java/chuck/examples/ChuckSimple/data/: sinetone.ck
java/edu/princeton/cs/chuck/: Chuck.java  ChuckProcessing.java  FloatReceiver.java  IntReceiver.java  Jchuck.java  NativeLoader.java  StringReceiver.java
java/test/: Beep.java  BeepTest.java  JchuckTest.java  Makefile  ReceiveTest.java  beep.ck  run
libuv/: VERSION
python/: Makefile  chuckmodule.cpp  setup.py
python/test/: sinetone.ck  spork.py
src/: Makefile.am  Makefile.in  RegEvent.cpp  RegEvent.h  chuck.cpp  chuck.h  chuck.hpp  chuck_compile.cpp  chuck_def.h  chuck_dl.h  chuck_java.cpp  chuck_java.h  chuck_shell.cpp  chuck_vm.cpp  libchuck_types.h  makefile.alsa  makefile.old  rtmidi.cpp  ugen_stk.h  ulib_events.cpp  ulib_events.h  util_events.cpp  util_events.h  util_hid.cpp  util_serial.cpp  util_sndfile.c  util_sndfile.h  util_string.cpp  util_thread.cpp  util_thread.h  vars.mk
src/RtAudio/: RtAudio.h
test/: Makefile  c2chuck.ck  chuck2c.ck  chuck_util_string_test.cpp  event-classes.ck  events.ck  libchuck_test.cpp  libchuck_test.hpp  regevent.ck  roundtrip.ck  sinetone.ck  sinetone_onesecond.ck  wait.ck  waitThreeSeconds.ck  willsporkagain.ck
test/ck/osc/: Makefile  charclass-match-test.ck  float-test.ck  int-test.ck  string-test.ck  stringlist-test.ck  two-args-test.ck
test/ck/osc/classes/: OscTestRunner.ck
test/scripts/osc/: charclass-negate-match-test.ck  charclass-range-match-test.ck  single-char-match-test.ck  star-match-test.ck
test/scripts/osc/classes/: OscTest.ck
